[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Sammi <samanthamary391@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.5"
ipython = {extras = ["notebook"], version = "^7.30.1"}
pandas = "^1.3.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
